<resources>
    <string name="app_name">哈尔滨理工大学</string>

    <string name="hello_world">哈尔滨理工大学</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册新用户</string>
    <string name="login">登录</string>
    <string name="et_account_hint">用户名</string>
    <string name="et_password_hint">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_sign">sign</string>
    <string name="title_activity_mainn">MainnActivity</string>
    <string name="title_activity_longin">登录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btregister">注册</string>
    <string name="touxiang">上传头像</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="look">查看</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="doc">有限公司首次股东会董事会监事会决议</string>
    <string name="agree">赞成</string>
    <string name="oppose">反对</string>
    <string name="abstain">弃权</string>
    <string name="result">表决结果</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
