<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cqs.wait.entity.VoteActivity">

    <TextView android:text="@string/doc" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        >
        <RadioButton
            android:id="@+id/oppose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oppose"
            />
        <RadioButton
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            />
        <RadioButton
            android:id="@+id/abstain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abstain"
            />

    </RadioGroup>
    <Button
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_centerHorizontal="true"
        android:text="提交"
        android:layout_marginTop="20dp"
        android:textSize="33sp"
        android:textColor="#f000"
        />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="后退"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />


</RelativeLayout>
