<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cqs.wait.RegisterActivity">

    <ImageView
        android:id="@+id/iv_tou"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:background="@drawable/login_picture_bg"
        android:src="@drawable/presentation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <Button
        android:id="@+id/bt_tou"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/touxiang"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv_tou"
        android:background="@drawable/login_btn"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/bt_tou">
        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical">
            <EditText
                android:id="@+id/account"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:inputType="text"
                android:hint="@string/et_account_hint"
                android:background="@drawable/login_et_bg"
                android:layout_margin="2dp"/>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/devide_line"/>
            <EditText
                android:id="@+id/password"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:inputType="textPassword"
                android:hint="@string/et_password_hint"
                android:background="@drawable/login_et_bg"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/btregister"
            android:layout_below="@id/ll_user_info"
            android:background="@drawable/login_btn"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</RelativeLayout>
